[package]
name = "real_time_fir_iir_filters"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Real-time FIR and IIR filters designed for use with vst's"
repository = "https://github.com/sigurd4/real_time_fir_iir_filters"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.3"
moddef = "0.2.2"
static_assertions = "1.1.0"
bytemuck = "1.17.0"
slice_ops = "0.1.10"

[dev-dependencies]
plotters = "0.3.6"
linspace = "0.1.1"

[features]
default = ["filters"]
filters = []