[package]
name = "real_time_fir_iir_filters"
version = "1.2.0"
authors = ["Sigurd Sætherø Spangelo"]
edition = "2021"
license = "MIT"
description = "Real-time FIR and IIR filters designed for use with vst's"
repository = "https://github.com/sigurd4/real_time_fir_iir_filters"
keywords = ["signal-processing", "vst", "real-time", "dsp", "dtsp"]
categories = ["algorithms", "mathematics", "multimedia::audio", "no-std::no-alloc", "science::robotics"]
exclude = ["plots/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.3"
moddef = "0.2.6"
static_assertions = "1.1.0"
bytemuck = "1.22.0"
tupleops = "0.1.1"
serde = {version = "1.0.219", features = ["derive"]}

[dev-dependencies]
plotters = "0.3.7"
linspace = "0.1.1"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
all-features = true

[features]
default = [
    "first_order_all_pass",
    "first_order",
    "first_order_lr",
    "first_order_rc",
    "pi",
    "pid",
    "second_order_butterworth",
    "second_order_chebyshev1",
    "second_order_chebyshev2",
    "second_order_elliptic",
    "second_order",
    "second_order_rc",
    "second_order_rlc",
    "second_order_sallen_key",
    "third_order_butterworth",
    "third_order",
    "third_order_sallen_key",
    "wah"
]

first_order_all_pass = []
first_order = []
first_order_lr = []
first_order_rc = []
pi = []

pid = []
second_order_butterworth = []
second_order_chebyshev1 = []
second_order_chebyshev2 = []
second_order_chebyshev = ["second_order_chebyshev1", "second_order_chebyshev2"]
second_order_elliptic = []
second_order = []
second_order_rc = []
second_order_rlc = []
second_order_sallen_key = []

third_order_butterworth = []
third_order = []
third_order_sallen_key = []

wah = []

butterworth = ["first_order", "second_order_butterworth", "third_order_butterworth"]
chebyshev1 = ["second_order_chebyshev1"]
chebyshev2 = ["second_order_chebyshev2"]
chebyshev = ["chebyshev1", "chebyshev2", "second_order_chebyshev"]
elliptic = ["second_order_elliptic"]
all_pass = ["first_order_all_pass"]
lr = ["first_order_lr"]
rc = ["first_order_rc", "second_order_rc"]
rlc = ["second_order_rlc"]
sallen_key = ["second_order_sallen_key", "third_order_sallen_key"]
analog_passive = ["lr", "rc", "rlc"]
analog_active = ["sallen_key", "wah"]
analog = ["analog_passive", "analog_active"]
parametric = ["first_order", "second_order", "third_order"]
ideal = ["parametric", "butterworth", "chebyshev", "elliptic", "all_pass"]